# demo-django

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: manage.py
app/demo/: tests.py
app/demo_django/: asgi.py  urls.py  wsgi.py
app/demo_django/settings/: base.py  dev.py  prod.py
docs/: 需求文档.md
examples/: getenv.py
